--- a/VirtuaLinac/VirtualLinac_test_am_19_9_2016.ipynb
+++ b/VirtuaLinac/VirtualLinac_test_am_19_9_2016.ipynb
@@ -58,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/robincole/Dropbox/09_Med_phys/NPL_files/VirtualLinac/virtualinac'"
+       "'/Users/xxx/virtualinac'"
       ]
      },
      "execution_count": 139,
