pyEclipseDVH test updated

--- a/Experiments in ipython notebooks/Project/Robin HN 21-11-2016/Case7 28-11-2016/Analyse case7 npgamma 28-11-2016.ipynb
+++ b/Experiments in ipython notebooks/Project/Robin HN 21-11-2016/Case7 28-11-2016/Analyse case7 npgamma 28-11-2016.ipynb
@@ -166,6 +166,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-244.4338517 20.5661483\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_reference.min(), x_reference.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-245.6838517 21.8161483\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_evaluation.min(), x_evaluation.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "metadata": {
     "collapsed": true
